2005-09-16  Andy Wingo  <wingo@pobox.com>

	* Changelog updated. Heh heh heh heh heh heh.

	* flumotion/common/gstreamer.py (get_plugin_version): Ignore
	module attribute references in this file. Requires latest
	pychecker CVS plus a patch in their tracker. Make check passes!

	* flumotion/common/boot.py.in (boot): Commit the non-generated
	file, doh....

	* misc/pycheckerhelp.py: Use boot.py.

	* Makefile.am (PYCHECKER_BLACKLIST): Ignore spyglass.py, until
	it's ported at least.

	* flumotion/common/gstreamer.py (get_plugin_version): Work in
	either gst version.

	* common/pychecker.mk: Fix up to separate gst-independent tests,
	gst 0.8 tests, and gst 0.9 tests.

	* flumotion/common/boot.py (init_gst, init_gobject): Make public.

	* flumotion/worker/checks/video.py: Um....

	* flumotion/worker/checks/video09.py: No need to import re

	* misc/pycheckerrc: Emacs friendly

	* common/pychecker.mk: Cleanup, preparation for some haxoring.

2005-09-16  Michael Smith <msmith@fluendo.com>

	* flumotion/common/compat.py:
	  Get pygtk version from gobject, not gtk, to avoid importing gtk
	  (which could fail if there's no X server). Thanks to Zaheer for the
	  fix.

2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  add another helper.  relegate twisted logging to level 5 by
	  default, I got tired of the spew.  But error tracebacks are
	  still at level 4
	* pkgconfig/flumotion-uninstalled.pc.in:
	* pkgconfig/flumotion.pc.in:
	  fix for now to use an existing symbol, but hm.  needs work.

2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  add some nice helper methods to log failures.  Add a cool
	  simple errback handler to objects, I feel fuzzy now.

2005-09-12  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/connections.py:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/parts.py: